# core

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  environment_lock.yml  pyproject.toml  pytest.ini  setup.py  sqlite3.db
brainscore_core/: __init__.py  behavior.py  compatibility.py  io_catalog.py  memory.py  model_interface.py  multimodal.py  nulls.py  temporal.py
brainscore_core/benchmarks/: __init__.py
brainscore_core/metrics/: __init__.py
brainscore_core/plugin_management/: README.md  conda_score.py  conda_score.sh  domain_plugin_interface.py  environment_manager.py  extract_from_existing.py  extract_templates.py  generate_benchmark_metadata.py  generate_model_metadata.py  generic_plugin_tests_helper.py  handle_metadata.py  import_plugin.py  metadata_utils.py  parse_plugin_changes.py  test_generic_helpers.py  test_plugin.sh  test_plugins.py
brainscore_core/submission/: README.md  __init__.py  __main__.py  configuration.py  database.py  database_models.py  developers_guide.md  endpoints.py  evaluation.py  repository.py  submission_system.drawio  utils.py
brainscore_core/supported_data_standards/: __init__.py
brainscore_core/supported_data_standards/brainio/: assemblies.py  fetch.py  packaging.py  s3.py  stimuli.py  transform.py  upload_validator.py
brainscore_core/supported_data_standards/brainio/tests/: conftest.py  test_assemblies.py  test_import.py  test_packaging.py  test_stimuli.py  test_transform.py  test_upload_validator.py
brainscore_core/travis/: automerge_check.yml  script.yml  submission_failure.yml
docs/source/: conf.py  index.rst
docs/source/modules/: api_reference.rst  benchmarks.rst  glossary.rst  metrics.rst  submission.rst  utils.rst
supported_data_standards/brainio/: __init__.py  packaging.py  s3.py
supported_data_standards/brainio/tests/: test_packaging.py  test_transform.py
tests/: README.md  conftest.py  test_behavioral_readout.py  test_compatibility.py  test_composite_selector.py  test_device_agnostic_env.py  test_environment_step.py  test_io_catalog.py  test_io_catalog_preflight.py  test_memory.py  test_message.py  test_model_interface.py  test_multimodal.py  test_nulls.py  test_output_event.py  test_state_change.py  test_subject_rename.py  test_synchronize_modalities.py  test_temporal.py  test_unit_selection.py  test_utils.py
tests/test_metrics/: test___init__.py  test_ceiling.py  test_cka.py  test_rdm.py  test_regression.py  test_transformations.py  test_xarray_utils.py
tests/test_plugin_management/: test_benchmark_metadata_generation.py  test_benchmarks.py  test_conda_score.py  test_environment_manager.py  test_handle_metadata.py  test_import_plugin.py  test_metadata_generation.py  test_model_metadata_generation.py  test_parse_plugin_changes.py  test_test_plugins.py
tests/test_plugin_management/test_conda_score__brainscore_dummy/: __init__.py  brainscore_dummy.py  pyproject.toml
tests/test_plugin_management/test_import_plugin__brainscore_dummy/brainscore_dummy/models/dummy_model/: __init__.py  model.py
tests/test_plugin_management/test_import_plugin__brainscore_dummy/brainscore_dummy/models/dummy_model_requirements_and_setup/: __init__.py  model.py  setup.py
tests/test_plugin_management/test_import_plugin__brainscore_dummy/brainscore_dummy/models/dummy_model_setup_only/: __init__.py  model.py  setup.py
tests/test_plugin_management/test_import_plugin__brainscore_dummy_registryprefix/brainscore_dummy/data/dummy_stimulus_set/: __init__.py
tests/test_plugin_management/test_import_plugin__brainscore_dummy_registryprefix/brainscore_dummy_registryprefix/: __init__.py
tests/test_plugin_management/test_parse_plugin_changes__brainscore_dummy/benchmarks/dummy_benchmark/: __init__.py
tests/test_plugin_management/test_parse_plugin_changes__brainscore_dummy/benchmarks/dummy_benchmark_2/: __init__.py
tests/test_plugin_management/test_parse_plugin_changes__brainscore_dummy/data/dummy_data/: __init__.py
tests/test_plugin_management/test_parse_plugin_changes__brainscore_dummy/model_helpers/: generic_plugin_tests.py
tests/test_plugin_management/test_parse_plugin_changes__brainscore_dummy/models/dummy_model/: __init__.py
tests/test_plugin_management/test_test_plugins__brainscore_dummy/: pyproject.toml
tests/test_plugin_management/test_test_plugins__brainscore_dummy/brainscore_dummy/plugintype/r_plugin/: environment.yml  test.py
tests/test_submission/: __init__.py  test_alexnet_consistency_integration.py  test_database.py  test_db.py  test_endpoints.py  test_integration.py  test_repository.py  test_submission.py
tools/: submission_failure.yml
travis/: automerge_check.yml  script.yml  submission_failure.yml
